Fixed small layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@ html, body{
 }
 
 body{
-  padding: 50px 0 0 0;
+  padding: 20px 0 0 0;
 }
 
 #map{
@@ -33,9 +33,10 @@ body{
 }
 
 
-.input_search > * {
-  float: left;
+.row{
+  margin: 10px 0;
 }
+
 
 
 #search{
@@ -44,11 +45,15 @@ body{
   padding-left: 100px;
   padding-right: 100px;
   font-size: 20px;
-  line-height: 37px;
+  line-height: 36px;
   text-align: left;
 }
 
 
+.input_search { /* Container */
+  position: relative;
+  height: 36px;
+}
 .input_search .before {
   background: url('tmp.png') no-repeat -41px -74px;
   height: 36px;
@@ -60,4 +65,7 @@ body{
   background: url('tmp.png') no-repeat -0px -175px;
   width: 78px;
   height: 36px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
